change project text color

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 <nav id="navbar" class="nav">
   <ul class="nav-list">
     <li>
-      <a href="#Welcome-Section">About</a>
+      <a class="" href="#Welcome-Section">About</a>
     </li>
     <li>
       <a href="#projects">Projects</a>
