this commit will update the page 3.18.2021

--- a/src/index.html
+++ b/src/index.html
@@ -9,28 +9,23 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <title>Landing Page</title>
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
 <body>
   <div id="background">
 
 
   <div id="welcome-container"></div><h1 id="welcome-section">Hola! I am Jonathan Martinez,<br> a Front-end Web Developer</h1></div>
-<p id="projects">Here are a few of my projects:</p>
-<section id class="project-tile"> 
-  <a href="https://codepen.io/jonathan-martinez-the-animator/pen/ExVdxXe">Tribute Page</a>
-  <a href="https://codepen.io/jonathan-martinez-the-animator/pen/QWjJmqN">Survey Form</a>
-  <a href="https://codepen.io/jonathan-martinez-the-animator/pen/mdeamvL">Product Launch Page</a>
-  <a href="https://codepen.io/jonathan-martinez-the-animator/pen/xxwBVmG">Documentation Form</a>
-</section>
-<nav id="navbar" class="nav">
-  <ul class="nav-list">
-    <li>
-      <a class="" href="#Welcome-Section">About</a>
+<nav id="navbar">
+  <ul id="nav-list">
+    <li class="navPoint">
+      <a href="#Welcome-Section">About</a>
     </li>
-    <li>
+    <li class="navPoint">
       <a href="#projects">Projects</a>
     </li>
-    <li>
+    <li class="navPoint">
       <a href="#profile-link">Contact</a>
     </li>
   </ul>
