this commit will update my portfolio page

--- a/src/index.html
+++ b/src/index.html
@@ -8,33 +8,51 @@
     rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <title>Landing Page</title>
+  <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet" />
+  <title>Jonathan Martinez's Portfolio Page!</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 </head>
 <body>
-  <div id="background">
+<div id="page1">
+  <div id="nav-div">
+    <nav>
+      <ul id="nav-list">
+        <li>
+          <a class="navPoint" href="#page1">About</a>
+        </li>
+        <li>
+          <a class="navPoint" href="#page2">Portfolio</a>
+        </li>
+        <li>
+          <a class="navPoint" href="#page3">Contact</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+<div>
+  <h1 id="welcome-section"><span class="block"></span>Hola! I am Jonathan Martinez<br> <span id="sub-heading">a Front-end Web Developer</span></h1></div>
 
-
-  <div id="welcome-container"></div><h1 id="welcome-section">Hola! I am Jonathan Martinez,<br> a Front-end Web Developer</h1></div>
-<nav id="navbar">
-  <ul id="nav-list">
-    <li class="navPoint">
-      <a href="#Welcome-Section">About</a>
-    </li>
-    <li class="navPoint">
-      <a href="#projects">Projects</a>
-    </li>
-    <li class="navPoint">
-      <a href="#profile-link">Contact</a>
-    </li>
-  </ul>
-</nav>
-<a
-      id="profile-link"
-      href="https://www.freecodecamp.org/fcc08ef6b3c-f805-4867-8535-cd12673eb77e"
-      ><id class="FCC"></i> Freecodecamp.com</a
-    >
-   </div> 
+</div>
+<div id="page2">
+  <h1>projects</h1>
+</div>
+<div id="page3">
+  <h1>contact info</h1>
+  <a id="profile-link" href="https://www.freecodecamp.org/fcc08ef6b3c-f805-4867-8535-cd12673eb77e">
+    <id class="FCC"></i> Freecodecamp.com
+  </a>
+  <!-- Place this tag where you want the button to render. -->
+  <a class="github-button" href="https://github.com/Jmartimus"
+    data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large"
+    aria-label="Follow @Jmartimus on GitHub">Follow @Jmartimus</a>
+  <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical"
+    data-theme="dark" data-vanity="jonathan-martinez-956179176"><a class="LI-simple-link"
+      href='https://www.linkedin.com/in/jonathan-martinez-956179176?trk=profile-badge'>Jonathan Martinez</a></div>
+</div>
   </body>
+
 
