more updates to css and html

--- a/src/index.html
+++ b/src/index.html
@@ -16,43 +16,52 @@
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 </head>
+
 <body>
-<div id="page1">
-  <div id="nav-div">
-    <nav>
-      <ul id="nav-list">
-        <li>
-          <a class="navPoint" href="#page1">About</a>
-        </li>
-        <li>
-          <a class="navPoint" href="#page2">Portfolio</a>
-        </li>
-        <li>
-          <a class="navPoint" href="#page3">Contact</a>
-        </li>
-      </ul>
-    </nav>
+  <div id="page1">
+    <div id="nav-div">
+      <nav>
+        <ul id="nav-list">
+          <li>
+            <a class="navPoint" href="#page1">Jonathan Martinez</a>
+          </li>
+          <li>
+            <a class="navPoint" href="#page2">Portfolio</a>
+          </li>
+          <li>
+            <a class="navPoint" href="#page3">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+    <div>
+      <h1 id="welcome-section"><span class="block"></span>Hola! I am Jonathan Martinez<br> <span id="sub-heading">a
+          Front-end Web Developer</span></h1>
+    </div>
+
   </div>
-<div>
-  <h1 id="welcome-section"><span class="block"></span>Hola! I am Jonathan Martinez<br> <span id="sub-heading">a Front-end Web Developer</span></h1></div>
+  <div id="page2">
+    <h1 id="page2title" >Portfolio</h1>
+  </div>
+  <div id="page3">
+    <h1 id="page3title">Contact</h1>
+    <div id="contactContainer">
+      <div><img  id="headshot" src="images/Headshot.jpg"></div>
+      <div><h1 class="page3text">Jonathan Martinez</h1></div><div>
+        <h3 class="page3text">Front-end Developer</h3>
+      </div><div>
+        <h3 class="page3text">Jmartinez070589@gmail.com</h3>
+      </div>
+      <div id="logoContainer">
+        <a href="https://www.linkedin.com/in/jonathan-martinez-956179176/" target="_blank"><img id="logos"
+            src="images/linkedinLogo.png"></a>
+        <a href="https://www.freecodecamp.org/fcc08ef6b3c-f805-4867-8535-cd12673eb77e" target="_blank"><img id="logos"
+            src="images/fcc_primary_small.png"></a>
+        <a href="https://github.com/Jmartimus" target="_blank"><img id="logos" src="images/githubLogo.png"></a>
+      </div>
 
-</div>
-<div id="page2">
-  <h1>projects</h1>
-</div>
-<div id="page3">
-  <h1>contact info</h1>
-  <a id="profile-link" href="https://www.freecodecamp.org/fcc08ef6b3c-f805-4867-8535-cd12673eb77e">
-    <id class="FCC"></i> Freecodecamp.com
-  </a>
-  <!-- Place this tag where you want the button to render. -->
-  <a class="github-button" href="https://github.com/Jmartimus"
-    data-color-scheme="no-preference: dark; light: dark; dark: dark;" data-size="large"
-    aria-label="Follow @Jmartimus on GitHub">Follow @Jmartimus</a>
-  <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="vertical"
-    data-theme="dark" data-vanity="jonathan-martinez-956179176"><a class="LI-simple-link"
-      href='https://www.linkedin.com/in/jonathan-martinez-956179176?trk=profile-badge'>Jonathan Martinez</a></div>
-</div>
-  </body>
-
-
+    </div>
+    <a>Resume FIX ME!!!</a>
+    <a href="https://www.youtube.com/playlist?list=PLQYzoiGor9LQ3M9i9JuGLhHp3YAjSBUkA" target="_blank">Vlog</a>
+  </div>
+</body>
