--- a/src/index.html
+++ b/src/index.html
@@ -41,27 +41,68 @@
 
   </div>
   <div id="page2">
-    <h1 id="page2title" >Portfolio</h1>
-  </div>
-  <div id="page3">
-    <h1 id="page3title">Contact</h1>
-    <div id="contactContainer">
-      <div><img  id="headshot" src="images/Headshot.jpg"></div>
-      <div><h1 class="page3text">Jonathan Martinez</h1></div><div>
-        <h3 class="page3text">Front-end Developer</h3>
-      </div><div>
-        <h3 class="page3text">Jmartinez070589@gmail.com</h3>
-      </div>
-      <div id="logoContainer">
-        <a href="https://www.linkedin.com/in/jonathan-martinez-956179176/" target="_blank"><img id="logos"
-            src="images/linkedinLogo.png"></a>
-        <a href="https://www.freecodecamp.org/fcc08ef6b3c-f805-4867-8535-cd12673eb77e" target="_blank"><img id="logos"
-            src="images/fcc_primary_small.png"></a>
-        <a href="https://github.com/Jmartimus" target="_blank"><img id="logos" src="images/githubLogo.png"></a>
-      </div>
+    <div>
+      <h1 id="page2title">Portfolio</h1>
+    </div>
+    <div class="allprojectscontainer">
+      <div class="row">
+      <div class="column">
+      <div id="randomQuoteMachine" class="projectcontainer">
+        <div class='imgcontainer'><a href="nolink" target="_blank"><img id="projectimage"
+              src="images/randomquotes.png"></a></div>
+        <div class="btncontainer"><a id="demo" class="btns" href="nolink" target="_blank">Demo</a><a id="code"
+            class="btns" href="https://github.com/Jmartimus/Random-Quote-Machine" target="_blank">Code</a></div></a>
+      </div></div>
+      <div class="column">
+      <div id="reduxcounter" class="projectcontainer">
+        <div class='imgcontainer'><a href="nolink" target="_blank"><img id="projectimage"
+              src="images/reduxcounter.png"></a>
+        </div>
+        <div class="btncontainer"><a id="demo" class="btns" href="nolink" target="_blank">Demo</a><a id="code"
+            class="btns" href="https://github.com/Jmartimus/reduxCounter" target="_blank">Code</a></div></a>
+      </div></div></div>
+<div class="row">
+  <div class="column">
+      <div id="reactmarkdown" class="projectcontainer">
+        <div class='imgcontainer'><a href="nolink" target="_blank"><img id="projectimage"
+              src="images/reactmarkdown.png"></a></div>
+        <div class="btncontainer"><a id="demo" class="btns" href="nolink" target="_blank">Demo</a><a id="code"
+            class="btns" href="https://github.com/Jmartimus/React-markdown" target="_blank">Code</a></div></a>
+      </div></div>
+      <div class="column">
+      <div id="digitalClock" class="projectcontainer">
+        <div class='imgcontainer'><a href="nolink" target="_blank"><img id="projectimage"
+              src="images/digitalclock.png"></a>
+        </div>
+        <div class="btncontainer"><a id="demo" class="btns" href="nolink" target="_blank">Demo</a><a id="code"
+            class="btns" href="https://github.com/Jmartimus/DigitalClock" target="_blank">Code</a></div></a>
+      </div></div></div>
 
     </div>
-    <a>Resume FIX ME!!!</a>
-    <a href="https://www.youtube.com/playlist?list=PLQYzoiGor9LQ3M9i9JuGLhHp3YAjSBUkA" target="_blank">Vlog</a>
-  </div>
+    <div id="page3">
+      <h1 id="page3title">Contact</h1>
+      <div id="contactContainer">
+        <div><img id="headshot" src="images/Headshot.jpg"></div>
+        <div>
+          <h1 class="page3text">Jonathan Martinez</h1>
+        </div>
+        <div>
+          <h3 class="page3text">Front-end Developer</h3>
+        </div>
+        <div>
+          <h3 class="page3text">Jmartinez070589@gmail.com</h3>
+        </div>
+        <div id="logoContainer">
+          <a href="https://www.linkedin.com/in/jonathan-martinez-956179176/" target="_blank"><img id="logos"
+              src="images/linkedinLogo.png"></a>
+          <a href="https://www.freecodecamp.org/fcc08ef6b3c-f805-4867-8535-cd12673eb77e" target="_blank"><img id="logos"
+              src="images/fcc_primary_small.png"></a>
+          <a href="https://github.com/Jmartimus" target="_blank"><img id="logos" src="images/githubLogo.png"></a></div>
+          <div id="secondButtonContainer">
+          <a class="btns" id="resume" href="images/martinezResume.pdf" target="_blank">Resume</a>
+          <a class="btns" id="vlog" href="https://www.youtube.com/playlist?list=PLQYzoiGor9LQ3M9i9JuGLhHp3YAjSBUkA"
+            target="_blank">Vlog</a></div>
+        
+
+    </div>
 </body>
