--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet" />
   <title>Jonathan Martinez's Portfolio Page!</title>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="OIP.jpg">
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
