--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <link rel="icon" type="image/x-icon" href="OIP.jpg">
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
 
 </head>
 
