--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,7 @@
 
     </div>
     <div id="page3">
-      <div id="page3BG"></div>
+      <div id="page3BG" class="darken-pseudo"></div>
       <h1 id="page3title">Contact</h1>
       <div id="contactContainer">
         <div><img id="headshot" src="images/Headshot.jpg"></div>
