--- a/src/index.html
+++ b/src/index.html
@@ -55,12 +55,12 @@
             class="btns" href="https://github.com/Jmartimus/Random-Quote-Machine" target="_blank">Code</a></div></a>
       </div></div>
       <div class="column">
-      <div id="reduxcounter" class="projectcontainer">
-        <div class='imgcontainer shrink'><a href="https://blissful-newton-505c47.netlify.app/" target="_blank"><img id="projectimage"
-              src="images/reduxcounter.png"></a>
+      <div id="drumMachine" class="projectcontainer">
+        <div class='imgcontainer shrink'><a href="https://compassionate-aryabhata-85328c.netlify.app/" target="_blank"><img id="projectimage"
+              src="images/drumMachine.png"></a>
         </div>
-        <div class="btncontainer"><a id="demo" class="btns" href="https://blissful-newton-505c47.netlify.app/" target="_blank">Demo</a><a id="code"
-            class="btns" href="https://github.com/Jmartimus/reduxCounter" target="_blank">Code</a></div></a>
+        <div class="btncontainer"><a id="demo" class="btns" href="https://compassionate-aryabhata-85328c.netlify.app/" target="_blank">Demo</a><a id="code"
+            class="btns" href="https://github.com/Jmartimus/Drum-Machine" target="_blank">Code</a></div></a>
       </div></div></div>
 <div class="row">
   <div class="column">
