--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet" />
   <title>Jonathan Martinez</title>
-  <link rel="icon" type="image/x-icon" href="OIP.jpg">
+  <link rel="icon" href="./images/Jmart_Design_Logo.png" type="image/x-icon" />
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -47,64 +47,76 @@
     </div>
     <div class="allprojectscontainer">
       <div class="row">
-      <div class="column">
-      <div id="randomQuoteMachine" class="projectcontainer">
-        <div class='imgcontainer shrink'><a href="https://determined-saha-075e13.netlify.app/" target="_blank"><img id="projectimage"
-              src="images/randomquotes.png"></a></div>
-        <div class="btncontainer"><a id="demo" class="btns" href="https://determined-saha-075e13.netlify.app/" target="_blank">Demo</a><a id="code"
-            class="btns" href="https://github.com/Jmartimus/Random-Quote-Machine" target="_blank">Code</a></div></a>
-      </div></div>
-      <div class="column">
-      <div id="drumMachine" class="projectcontainer">
-        <div class='imgcontainer shrink'><a href="https://compassionate-aryabhata-85328c.netlify.app/" target="_blank"><img id="projectimage"
-              src="images/drumMachine.png"></a>
+        <div class="column">
+          <div id="randomQuoteMachine" class="projectcontainer">
+            <div class='imgcontainer shrink'><a href="https://determined-saha-075e13.netlify.app/" target="_blank"><img
+                  id="projectimage" src="images/randomquotes.png"></a></div>
+            <div class="btncontainer"><a id="demo" class="btns" href="https://determined-saha-075e13.netlify.app/"
+                target="_blank">Demo</a><a id="code" class="btns"
+                href="https://github.com/Jmartimus/Random-Quote-Machine" target="_blank">Code</a></div></a>
+          </div>
         </div>
-        <div class="btncontainer"><a id="demo" class="btns" href="https://compassionate-aryabhata-85328c.netlify.app/" target="_blank">Demo</a><a id="code"
-            class="btns" href="https://github.com/Jmartimus/Drum-Machine" target="_blank">Code</a></div></a>
-      </div></div></div>
-<div class="row">
-  <div class="column">
-      <div id="reactmarkdown" class="projectcontainer">
-        <div class='imgcontainer shrink'><a href="https://hungry-carson-743ef6.netlify.app/" target="_blank"><img id="projectimage"
-              src="images/reactmarkdown.png"></a></div>
-        <div class="btncontainer"><a id="demo" class="btns" href="https://hungry-carson-743ef6.netlify.app/" target="_blank">Demo</a><a id="code"
-            class="btns" href="https://github.com/Jmartimus/React-markdown" target="_blank">Code</a></div></a>
-      </div></div>
-      <div class="column">
-      <div id="digitalClock" class="projectcontainer">
-        <div class='imgcontainer shrink'><a href="https://zen-mestorf-c65bcb.netlify.app/" target="_blank"><img id="projectimage"
-              src="images/digitalclock.png"></a>
+        <div class="column">
+          <div id="drumMachine" class="projectcontainer">
+            <div class='imgcontainer shrink'><a href="https://compassionate-aryabhata-85328c.netlify.app/"
+                target="_blank"><img id="projectimage" src="images/drumMachine.png"></a>
+            </div>
+            <div class="btncontainer"><a id="demo" class="btns"
+                href="https://compassionate-aryabhata-85328c.netlify.app/" target="_blank">Demo</a><a id="code"
+                class="btns" href="https://github.com/Jmartimus/Drum-Machine" target="_blank">Code</a></div></a>
+          </div>
         </div>
-        <div class="btncontainer"><a id="demo" class="btns" href="https://zen-mestorf-c65bcb.netlify.app/" target="_blank">Demo</a><a id="code"
-            class="btns" href="https://github.com/Jmartimus/DigitalClock" target="_blank">Code</a></div></a>
-      </div></div></div>
-
+      </div>
+      <div class="row">
+        <div class="column">
+          <div id="reactmarkdown" class="projectcontainer">
+            <div class='imgcontainer shrink'><a href="https://hungry-carson-743ef6.netlify.app/" target="_blank"><img
+                  id="projectimage" src="images/reactmarkdown.png"></a></div>
+            <div class="btncontainer"><a id="demo" class="btns" href="https://hungry-carson-743ef6.netlify.app/"
+                target="_blank">Demo</a><a id="code" class="btns" href="https://github.com/Jmartimus/React-markdown"
+                target="_blank">Code</a></div></a>
+          </div>
+        </div>
+        <div class="column">
+          <div id="digitalClock" class="projectcontainer">
+            <div class='imgcontainer shrink'><a href="https://zen-mestorf-c65bcb.netlify.app/" target="_blank"><img
+                  id="projectimage" src="images/digitalclock.png"></a>
+            </div>
+            <div class="btncontainer"><a id="demo" class="btns" href="https://zen-mestorf-c65bcb.netlify.app/"
+                target="_blank">Demo</a><a id="code" class="btns" href="https://github.com/Jmartimus/DigitalClock"
+                target="_blank">Code</a></div></a>
+          </div>
+        </div>
+      </div>
     </div>
-    <div id="page3">
-      <div id="page3BG" class="darken-pseudo"></div>
-      <h1 id="page3title">Contact</h1>
-      <div id="contactContainer">
-        <div><img id="headshot" src="images/Headshot.jpg"></div>
-        <div>
-          <h1 class="page3text">Jonathan Martinez</h1>
-        </div>
-        <div>
-          <h3 class="page3text">Front-end Developer</h3>
-        </div>
-        <div>
-          <h3 class="page3text">Jmartinez070589@gmail.com</h3>
-        </div>
-        <div id="logoContainer">
-          <a class="shrink" href="https://www.linkedin.com/in/jonathan-martinez-956179176/" target="_blank"><img id="logos"
-              src="images/linkedinLogo.png"></a>
-          <a class="shrink" href="https://www.freecodecamp.org/fcc08ef6b3c-f805-4867-8535-cd12673eb77e" target="_blank"><img id="logos"
-              src="images/fcc_primary_small.png"></a>
-          <a class="shrink" href="https://github.com/Jmartimus" target="_blank"><img id="logos" src="images/githubLogo.png"></a></div>
-          <div id="secondButtonContainer">
-          <a class="btns" id="resume" href="images/martinezResume.pdf" target="_blank">Resume</a>
-          <a class="btns" id="vlog" href="https://www.youtube.com/playlist?list=PLQYzoiGor9LQ3M9i9JuGLhHp3YAjSBUkA"
-            target="_blank">Vlog</a></div>
-        
-
+  </div>
+  <div id="page3">
+    <div id="page3BG" class="darken-pseudo"></div>
+    <h1 id="page3title">Contact</h1>
+    <div id="contactContainer">
+      <div><img id="headshot" src="images/Headshot.jpg"></div>
+      <div>
+        <h1 class="page3text">Jonathan Martinez</h1>
+      </div>
+      <div>
+        <h3 class="page3text">Front-end Developer</h3>
+      </div>
+      <div>
+        <h3 class="page3text">Jmartinez070589@gmail.com</h3>
+      </div>
+      <div id="logoContainer">
+        <a class="shrink" href="https://www.linkedin.com/in/jonathan-martinez-956179176/" target="_blank"><img
+            id="logos" src="images/linkedinLogo.png"></a>
+        <a class="shrink" href="https://www.freecodecamp.org/fcc08ef6b3c-f805-4867-8535-cd12673eb77e"
+          target="_blank"><img id="logos" src="images/fcc_primary_small.png"></a>
+        <a class="shrink" href="https://github.com/Jmartimus" target="_blank"><img id="logos"
+            src="images/githubLogo.png"></a>
+      </div>
+      <div id="secondButtonContainer">
+        <a class="btns" id="resume" href="images/martinezResume.pdf" target="_blank">Resume</a>
+        <a class="btns" id="vlog" href="https://www.youtube.com/playlist?list=PLQYzoiGor9LQ3M9i9JuGLhHp3YAjSBUkA"
+          target="_blank">Vlog</a>
+      </div> 
     </div>
+    <div id="builtByContainer"><div id="builtBy">Built by:</div><img id="jmartLogo" src="images/Jmart_Design_Logo.png"></img></div></div>
 </body>
