css changes and added footer

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <script>{var date=new Date().getFullYear}</script>
 
 </head>
 
@@ -118,5 +119,6 @@
           target="_blank">Vlog</a>
       </div> 
     </div>
-    <div id="builtByContainer"><div id="builtBy">Built by:</div><img id="jmartLogo" src="images/Jmart_Design_Logo.png"></img></div></div>
+  </div>
+    <footer id="builtByContainer"><div id="builtBy">Built by:<img id="jmartLogo" src="images/Jmart_Design_Logo.png"></img></div><div id="copyright">&copy Jonathan Martinez 2021</div></footer>
 </body>
