mars-rover-app update.

--- a/src/index.html
+++ b/src/index.html
@@ -80,11 +80,11 @@
         </div>
         <div class="column">
           <div id="digitalClock" class="projectcontainer">
-            <div class='imgcontainer shrink'><a href="https://zen-mestorf-c65bcb.netlify.app/" target="_blank"><img
-                  id="projectimage" src="images/digitalclock.png"></a>
+            <div class='imgcontainer shrink'><a href="https://adoring-brahmagupta-10a731.netlify.app/" target="_blank"><img
+                  id="projectimage" src="images/MarsRoverApp.png"></a>
             </div>
-            <div class="btncontainer"><a id="demo" class="btns" href="https://zen-mestorf-c65bcb.netlify.app/"
-                target="_blank">Demo</a><a id="code" class="btns" href="https://github.com/Jmartimus/DigitalClock"
+            <div class="btncontainer"><a id="demo" class="btns" href="https://adoring-brahmagupta-10a731.netlify.app/"
+                target="_blank">Demo</a><a id="code" class="btns" href="https://github.com/Jmartimus/Mars-Rover-App"
                 target="_blank">Code</a></div></a>
           </div>
         </div>
