--- a/src/index.html
+++ b/src/index.html
@@ -169,14 +169,14 @@
     <div id="aboutContainer">
       <div id="aboutText">I am primarily a Front-end React Developer who spent years in the class room as an educator.
         This experience as a Band Director gave me a plethora of unique skills that I apply daily as a developer such
-        as: communication, punctuality, ingenuity, and tenacity. I also enjoy to write clean,
+        as: communication, punctuality, ingenuity, and tenacity. I enjoy to write clean,
         succinct code that functions well to create vast projects. The design aspect of web development is incredibly
         enjoyable for me. I love learning which comes in handy when I am learning new technologies or improving my
         skills. <br><br>I have contributed to the <a class="aboutLinks" href="https://www.reactjsdallas.com/"
-          target="_blank">React Dallas</a> open source website
+          target="_blank">ReactJS Dallas</a> open source website
         which serves around 600 members currently. Most of my education has come from <a class="aboutLinks"
           href="https://www.freecodecamp.org/fcc08ef6b3c-f805-4867-8535-cd12673eb77e" target="_blank">freecodecamp</a>,
-        <a class="aboutLinks" href="https://www.udemy.com/" target="_blank">Udemy.com,</a> and mentorship from several
+        <a class="aboutLinks" href="https://www.udemy.com/" target="_blank">Udemy.com</a>, and mentorship from several
         established developers in the area.<br><br> I hope to find a
         collaborative team to work alongside where I can grow and
         contribute. I am passionate about
