--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,17 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <meta property="og:image" content= "./images/Websitepic.png" />
+  <meta property="og:type" content="website thumbnail" />
+  <meta property="og:url" content="https://www.jonathanmartinez.net/" />
+  <meta property="og:title" content="Check out Jonathan's Portfolio Page" />
+  <meta property="og:description" content="Jonathan's Portfolio Page shares some of his most recent projects and was created to share his work with the world.  Enjoy!" /> 
   <script>{ var date = new Date().getFullYear }</script>
 
 </head>
 
 <!--1. Add animations somewhere? maybe appear on scroll?
-    2. Find a way to feature Social Media Website
-    3. Change fonts and colors - talk to emily.
-    4. FINISH....making site mobile-friendly -->
+    2. Find a way to feature Social Media Website-->
 
 <body>
   <div id="page1">
