--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta property="og:image" content= "https://ibb.co/zmCx4TB" />
+  <meta property="og:image" content= "https://imgur.com/a/3YHEeoE" />
   <meta property="og:type" content="website thumbnail" />
   <meta property="og:url" content="https://www.jonathanmartinez.net/" />
   <meta property="og:title" content="Check out Jonathan's Portfolio Page" />
@@ -25,7 +25,8 @@
 </head>
 
 <!--1. Add animations somewhere? maybe appear on scroll?
-    2. Find a way to feature Social Media Website-->
+    2. Add Social Media Site after I can fix the back end
+    3. Convert image to link for thumbnails-->
 
 <body>
   <div id="page1">
