--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <meta property="og:image" content= "https://imgur.com/a/3YHEeoE" />
+  <meta property="og:image" content= "https://i.imgur.com/bCPt1Y3.jpg" />
   <meta property="og:type" content="website thumbnail" />
   <meta property="og:url" content="https://www.jonathanmartinez.net/" />
   <meta property="og:title" content="Check out Jonathan's Portfolio Page" />
