calculator replaced quote machine

--- a/src/index.html
+++ b/src/index.html
@@ -70,15 +70,14 @@
     </div>
     <div class="allprojectscontainer">
       <div id="randomQuoteMachine" class="projectcontainer">
-        <div class='imgcontainer shrink'><a href="https://determined-saha-075e13.netlify.app/" target="_blank"><img
-              id="projectimage" src="images/randomquotes.png"></a></div>
-        <div class="projTitles">Random Quote Machine</div>
+        <div class='imgcontainer shrink'><a href="https://dreamy-ramanujan-d28f2a.netlify.app/" target="_blank"><img
+              id="projectimage" src="images/calculator.png"></a></div>
+        <div class="projTitles">Javascript Calculator</div>
         <hr class="projectlines">
         <div class="projSkills">HTML | SCSS | JAVASCRIPT | REACT</div>
-        <div class="projAbout">This app generates random quotes and colors by making calls to an external API for the
-          quote information.</div>
-        <div class="btncontainer"><a id="demo" class="btns" href="https://determined-saha-075e13.netlify.app/"
-            target="_blank">Demo</a><a id="code" class="btns" href="https://github.com/Jmartimus/Random-Quote-Machine"
+        <div class="projAbout">This is a calculator that carries out simple functions using Javascript it also utilizes the useRef hook.</div>
+        <div class="btncontainer"><a id="demo" class="btns" href="https://dreamy-ramanujan-d28f2a.netlify.app/"
+            target="_blank">Demo</a><a id="code" class="btns" href="https://github.com/Jmartimus/calculator"
             target="_blank">Code</a></div></a>
       </div>
 
