added logos and scss changes

--- a/src/index.html
+++ b/src/index.html
@@ -144,12 +144,14 @@
           <img id="JavaScript" src="images/Logos/Javascript.png">
           <div id="javascriptTitle">JavaScript</div>
         </div>
-      </div>
-      <div id="container2">
         <div class="skillContainers">
           <img id="TypeScript" src="images/Logos/Typescript.png">
           <div id="typescriptTitle">TypeScript</div>
         </div>
+      </div>
+      
+      <div id="container2">
+        
         <div class="skillContainers">
           <img id="react" src="images/Logos/React-icon.png">
           <div id="reactTitle">React</div>
@@ -161,6 +163,14 @@
         <div class="skillContainers">
           <img id="Recoil" src="images/Logos/Recoil-again.png">
           <div id="recoilTitle">Recoil</div>
+        </div>
+        <div class="skillContainers">
+          <img id="nest" src="images/Logos/Nest-small.svg">
+          <div id="nestTitle">Nestjs</div>
+        </div>
+        <div class="skillContainers">
+          <img id="post" src="images/Logos/postgresql-226047.png">
+          <div id="postTitle">PostgreSQL</div>
         </div>
       </div>
     </div>
