--- a/src/index.html
+++ b/src/index.html
@@ -63,8 +63,7 @@
         </div>
         <div class="sub-heading">
           <div class="block"></div>
-          <p>a
-            Front-end Web Developer</p>
+          <p>Web Developer</p>
         </div>
       </div>
     </div>
