updated mars app photo

--- a/src/index.html
+++ b/src/index.html
@@ -121,10 +121,10 @@
         </div>
         <div class="projTitles">Mars Rover App</div>
         <hr class="projectlines">
-        <div class="projSkills">REACT | RECOIL | DATEPICKER | SCSS</div>
+        <div class="projSkills">REACT | RECOIL | MATERIALUI | SCSS</div>
         <div class="projAbout" id="marsAbout">The Mars Rover App connects to the Mars rover API at Nasa to generate
           pictures of the Mars surface based on user input. It uses recoil to manage its global state and
-          React-datepicker to streamline the user's experience. This project is still under construction.</div>
+          MaterialUI to streamline the user's experience. This project is still under construction.</div>
         <div class="btncontainer"><a id="demo" class="btns" href="https://adoring-brahmagupta-10a731.netlify.app/"
             target="_blank">Demo</a><a id="code" class="btns" href="https://github.com/Jmartimus/Mars-Rover-App"
             target="_blank">Code</a></div></a>
