grammatical error fixed

--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
     <div id="aboutContainer">
       <div id="aboutText">I am primarily a Front-end React Developer who spent years in the class room as an educator.
         This experience as a Band Director gave me a plethora of unique skills that I apply daily as a developer such
-        as: communication, punctuality, ingenuity, and tenacity. I enjoy to write clean,
+        as: communication, punctuality, ingenuity, and tenacity. I enjoy to write clean
         succinct code that functions well to create vast projects. The design aspect of web development is incredibly
         enjoyable for me. I love learning which comes in handy when I am learning new technologies or improving my
         skills. <br><br>I have contributed to the <a class="aboutLinks" href="https://www.reactjsdallas.com/"
